--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <main>
         <section id="telefone">
             <iframe src="home.html" frameborder="0" name="tela" id="tela">
-                
+                Seu navegador não é compatível com esse conteúdo.
             </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="Home"></a>
+            <a href="youtube.html" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="Youtube"></a>
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="Github"></a>
+            <a href="instagram.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="Twitter"></a>
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
