Ainda semi finalizado
Faltam as outras redes sociais

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="Home"></a>
+            <a href="home.html" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="Home"></a>
             <a href="youtube.html" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="Youtube"></a>
             <a href="#" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="Github"></a>
             <a href="instagram.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="Instagram"></a>
